fix contact section in dark mode

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-      @apply bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100 dark:border-white;
+      @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 dark:border-white;
       
     }
     #nav-holder{
@@ -23,7 +23,7 @@
       @apply border-2 border-gray-400 dark:border-white
     }
     #contact{
-      @apply bg-slate-300 border-black border-solid dark:bg-white
+      @apply bg-white dark:bg-gray-900
     }
     #profile-holder{
       @apply bg-white dark:bg-gray-700 drop-shadow-w2xl
@@ -35,6 +35,9 @@
       @apply bg-neutral-800 dark:bg-gray-800
     }
     #mobile-nav-drop {
+      @apply dark:bg-gray-800
+    }
+    #contact-card {
       @apply dark:bg-gray-800
     }
     /* #nav-btn {
